--- a/AnitoTracer.vcxproj.filters
+++ b/AnitoTracer.vcxproj.filters
@@ -11,13 +11,30 @@
     <Filter Include="Engine\Debug">
       <UniqueIdentifier>{240ecacf-a684-49ab-9160-a8eefecc3f00}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\WindowingSystem">
+      <UniqueIdentifier>{23fbf361-baed-4e8d-9eb9-7210e246a045}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Application</Filter>
     </ClCompile>
+    <ClCompile Include="EditorWindow.cpp">
+      <Filter>Application</Filter>
+    </ClCompile>
+    <ClCompile Include="Window.cpp">
+      <Filter>Engine\WindowingSystem</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EditorWindow.h">
+      <Filter>Application</Filter>
+    </ClInclude>
     <ClInclude Include="Logger.h">
       <Filter>Engine\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>Engine\WindowingSystem</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
