--- a/AnitoTracer/AnitoTracer.vcxproj
+++ b/AnitoTracer/AnitoTracer.vcxproj
@@ -109,6 +109,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources\resource.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_barriers.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_check_feature_support.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_core.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_default.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_pipeline_state_stream.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_property_format_table.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_render_pass.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_resource_helpers.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_root_signature.h" />
+    <ClInclude Include="Source\Libraries\D3DX12\d3dx12_state_object.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12DebugLayer.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12DeviceContext.h" />
     <ClInclude Include="Source\Platform\EditorWindow.h" />
