--- a/AnitoTracer/AnitoTracer.vcxproj
+++ b/AnitoTracer/AnitoTracer.vcxproj
@@ -68,7 +68,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d12.lib;dxgi.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d12.lib;dxgi.lib;dxguid.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -92,10 +92,12 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d12.lib;dxgi.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d12.lib;dxgi.lib;dxguid.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Runtime\D3D12\D3D12PipelineState.cpp" />
+    <ClCompile Include="Source\Runtime\D3D12\D3D12VertexBuffer.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12DebugLayer.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12DeviceContext.cpp" />
     <ClCompile Include="Source\Platform\EditorWindow.cpp" />
@@ -108,6 +110,8 @@
     <ClCompile Include="Source\Platform\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Runtime\D3D12\D3D12PipelineState.h" />
+    <ClInclude Include="Source\Runtime\D3D12\D3D12VertexBuffer.h" />
     <ClInclude Include="Resources\resource.h" />
     <ClInclude Include="Source\Libraries\D3DX12\d3dx12.h" />
     <ClInclude Include="Source\Libraries\D3DX12\d3dx12_barriers.h" />
