--- a/AnitoTracer/AnitoTracer.vcxproj.filters
+++ b/AnitoTracer/AnitoTracer.vcxproj.filters
@@ -36,9 +36,6 @@
     <Filter Include="Source\Engine\D3DX12">
       <UniqueIdentifier>{88f2109b-7ffa-4f61-b7b0-f55e78c3d3ac}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source\Engine\D3D12\RenderSystem\VertexBuffer">
-      <UniqueIdentifier>{5d9d8467-87b4-492d-a874-b4c74fd2556e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source\Engine\D3D12\RenderSystem\PipelineState">
       <UniqueIdentifier>{84b1ad3b-ae24-4e24-bab5-2f9eaf30cf41}</UniqueIdentifier>
     </Filter>
@@ -56,6 +53,12 @@
     </Filter>
     <Filter Include="Source\Engine\D3D12\RenderSystem\PipelineState\GraphicsPipeline">
       <UniqueIdentifier>{d09cb777-99b1-47c5-b7fb-01698c5f4e12}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Engine\D3D12\RenderSystem\VertexBuffer">
+      <UniqueIdentifier>{5d9d8467-87b4-492d-a874-b4c74fd2556e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Engine\D3D12\RenderSystem\CommandContext\CommandQueue">
+      <UniqueIdentifier>{bcfd7db4-2fff-464a-b5c2-6f1028869747}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -97,6 +100,9 @@
     </ClCompile>
     <ClCompile Include="Source\Runtime\D3D12\D3D12GraphicsPipeline.cpp">
       <Filter>Source\Engine\D3D12\RenderSystem\PipelineState\GraphicsPipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Runtime\D3D12\D3D12CommandQueue.cpp">
+      <Filter>Source\Engine\D3D12\RenderSystem\CommandContext\CommandQueue</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -180,6 +186,9 @@
     </ClInclude>
     <ClInclude Include="Source\Runtime\D3D12\D3D12GraphicsPipeline.h">
       <Filter>Source\Engine\D3D12\RenderSystem\PipelineState\GraphicsPipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Runtime\D3D12\D3D12CommandQueue.h">
+      <Filter>Source\Engine\D3D12\RenderSystem\CommandContext\CommandQueue</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
