--- a/AnitoTracer/AnitoTracer.vcxproj
+++ b/AnitoTracer/AnitoTracer.vcxproj
@@ -96,6 +96,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Runtime\D3D12\D3D12IndexBuffer.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12CommandQueue.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12GraphicsPipeline.cpp" />
     <ClCompile Include="Source\Runtime\D3D12\D3D12Buffer.cpp" />
@@ -115,6 +116,7 @@
     <ClCompile Include="Source\Platform\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Runtime\D3D12\D3D12IndexBuffer.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12CommandQueue.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12GraphicsPipeline.h" />
     <ClInclude Include="Source\Runtime\D3D12\D3D12Buffer.h" />
