added .hlsl shaders and edited EditorWindow code; untested w primitives but coded just to work w different hlsl files

--- a/AnitoTracer/AnitoTracer.vcxproj
+++ b/AnitoTracer/AnitoTracer.vcxproj
@@ -149,6 +149,17 @@
   <ItemGroup>
     <ResourceCompile Include="Resources\AnitoTracer.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Source\PixelShader.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="Source\shaders.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="Source\VertexShader.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
